# SAHshell

./: .gitignore  CMakeLists.txt  Makefile  README.md  lol.c  run.sh  test.c
src/: Globals.c  Globals.h  Parsing.c  Parsing.h  ReadInput.c  ReadInput.h  SAHCommands.c  SAHCommands.h  SAHShell.c  SAHShell.h  main.c
